# sis-rules-engine

./: .gitignore  CHANGELOG.md  CURRENT_STATE.md  Dockerfile  FREE_AUDIT.md  GITHUB_RELEASE_NOTES.md  GOLDEN_RULE.md  LICENSE  MONETIZATION_PLAN.md  MONETIZATION_STRATEGY.md  PROVEN_RULES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY-GUARANTEES.md  SERVICES.md  check-github-names.sh  cleanup_source_control.sh  debug.py  debug_acl.py  debug_json.py  debug_scanner.py  demo_sis.sh  deploy.sh  docker-compose.yml  final-test.txt  final_golden_test.sh  final_test.py  finalize_release.sh  fix_types.sh  install_sis.sh  manual_test.py  production_cleanup.py  push_to_github.sh  pyproject.toml  real-world-example.tf  requirements.txt  run_final_check.sh  setup.py  setup_ci.sh  (+31 more)
.github/scripts/: parse-sis-results.py
.github/workflows/: ci.yml  proxy-upgrade-gate.yml  sis-validation.yml  test-triggers.yml
contracts/: ExampleSecureProxy.sol  TestProxyVulnerable.sol
docs/: API.md  RULES.md  deployment.md  proxy-upgrade-audit-scope.md
governance/: README.md  exception-example.json  exception-provenance.v1.md  exception-schema.v1.json  provenance-interface.v1.md  signing-authority.v1.md
institution/: CANONICAL_EXECUTION.md  MONETIZATION.md  TERMS_OF_SERVICE.md
institution/collector/: demo_collector.py
institution/skus/: provenance-collector-v1.md
pro_features/: features.py
pro_features/parsers/: __init__.py
pro_features/rules/: compliance.py
reports/: full_scan.json  full_scan.txt
rules/: README.md  __init__.py  canonical.json
rules/canonical/: metadata.json  rules.json
rules/defi-irreversibility/: metadata.json  rules.json
rules/defi-safety/: metadata.json  rules.json
rules/premium/: metadata.json  rules.json
scripts/: generate_compliance.py  generate_keypair.py  generate_license.py  migrate_to_pack_system.sh  migrate_to_packs.sh  run_canonical_suite.py  sign_exception.py  upgrade_test.sh
sis-core/: verify-sis.sh
sis-core/src/sis/: CANONICAL_BUSINESS_MAP.tsv  CANONICAL_BUSINESS_MAP_FILLED.tsv  cli.py  cli.py.backup2  cli.py.corrupted  cli.py.messed  cli.py.remote  engine.py  exception_handler.py  provenance_emitter.py  scanner.py  (+3 more)
src/sis/: __init__.py  auth.py  cli.py  engine.py  engine.py.fixed  license.py  main.py  scanner.py
terraform-examples/: database.tf  main.tf
test-results/: canonical.xml  report.json
test_infra/: vulnerable.tf
tests/: canonical_suite.py  final_pack_integration_test.py  generate_full_suite.sh  generate_full_suite.sh.save  results_matrix.json  run_full_suite.sh  simple_test.py  test_api.py  test_array_regression.py  test_complete_pack_system.py  test_engine.py  test_final_integration.py  test_loader.py  test_pack_attribution.py  test_scanner.py  verify_pack_system.py
(+72 files in other folders)
